increase font-size of brand for tablet & desktop, resize media-query to prevent element overlap

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -26,7 +26,8 @@
 .nav-brand {
   position: absolute;
   left: 20px;
-  font-size: 2.1em;
+  top: 10px;
+  font-size: 3em;
   font-family: 'Tangerine', cursive;
 }
 .nav a {
@@ -34,7 +35,7 @@
   color: #eee;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 520px) {
   .nav {
     display: grid;
     grid-template-rows: 80px 40px;
